Leave lib/ and classes/ intact but delete their contents.

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,9 @@ sample/lib
 sample/classes/
 sample/nomnomnom.jar
 classes/
+lib/
 leiningen.jar
 leiningen-standalone.jar
 pom-generated.xml
 pom.xml
-Manifest.txt
 lein-swank/lein-swank.jar
