--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>leiningen</groupId>
   <artifactId>leiningen</artifactId>
-  <version>1.2.1-SNAPSHOT</version>
+  <version>1.3.0</version>
   <name>leiningen</name>
   <description>A build tool designed not to set your hair on fire.</description>
   <url>http://github.com/technomancy/leiningen</url>
@@ -15,7 +15,7 @@
   <scm>
     <connection>scm:git:git://github.com/technomancy/leiningen.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/technomancy/leiningen.git</developerConnection>
-    <tag>5c85cdb534da5e079dd97a34fde25d977885fd1a</tag>
+    <tag>7efb72f9635239b4853d22265b95239bc3c18fe7</tag>
     <url>http://github.com/technomancy/leiningen</url>
   </scm>
   <build>
@@ -54,12 +54,12 @@
     <dependency>
       <groupId>org.clojure</groupId>
       <artifactId>clojure</artifactId>
-      <version>1.2.0-beta1</version>
+      <version>1.2.0</version>
     </dependency>
     <dependency>
       <groupId>org.clojure</groupId>
       <artifactId>clojure-contrib</artifactId>
-      <version>1.2.0-beta1</version>
+      <version>1.2.0</version>
     </dependency>
     <dependency>
       <groupId>ant</groupId>
