Fixed compile test

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-sample/lib
-sample/classes/
-sample/nomnomnom*.jar
+test_projects/*/lib
+test_projects/*/classes/
+test_projects/*/nomnomnom*.jar
+test_projects/sample/pom.xml
 classes/
 lib/
 leiningen*.jar
 lein-swank/lein-swank*.jar
 autodoc/
-/sample/pom.xml
+bin/nom
