--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>leiningen</groupId>
   <artifactId>leiningen</artifactId>
-  <version>1.3.1</version>
+  <version>1.4.0-SNAPSHOT</version>
   <name>leiningen</name>
   <description>A build tool designed not to set your hair on fire.</description>
   <url>http://github.com/technomancy/leiningen</url>
@@ -15,7 +15,7 @@
   <scm>
     <connection>scm:git:git://github.com/technomancy/leiningen.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/technomancy/leiningen.git</developerConnection>
-    <tag>6ca18c8d47524d78fe5d5e0039eedb2acd41361b</tag>
+    <tag>2ea4b63e584267745fdf2d3f0f9888ba182eabfe</tag>
     <url>http://github.com/technomancy/leiningen</url>
   </scm>
   <build>
