--- a/pom.xml
+++ b/pom.xml
@@ -3,17 +3,19 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>leiningen</groupId>
   <artifactId>leiningen</artifactId>
-  <version>1.6.0-SNAPSHOT</version>
+  <version>1.6.0</version>
   <name>leiningen</name>
   <description>A build tool designed not to set your hair on fire.</description>
   <url>https://github.com/technomancy/leiningen</url>
   <licenses>
-    <license />
+    <license>
+      <name>Eclipse Public License</name>
+    </license>
   </licenses>
   <scm>
     <connection>scm:git:git://github.com/technomancy/leiningen.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/technomancy/leiningen.git</developerConnection>
-    <tag>a1fa43400295d57a9acfed10735c1235904a9407</tag>
+    <tag>868441c25ff304912ff644a831423be385bae7a9</tag>
     <url>https://github.com/technomancy/leiningen</url>
   </scm>
   <build>
@@ -36,14 +38,6 @@
       <url>http://repo1.maven.org/maven2</url>
     </repository>
     <repository>
-      <id>clojure</id>
-      <url>http://build.clojure.org/releases</url>
-    </repository>
-    <repository>
-      <id>clojure-snapshots</id>
-      <url>http://build.clojure.org/snapshots</url>
-    </repository>
-    <repository>
       <id>clojars</id>
       <url>http://clojars.org/repo/</url>
     </repository>
@@ -60,19 +54,30 @@
       <version>1.2.0</version>
     </dependency>
     <dependency>
+      <groupId>clucy</groupId>
+      <artifactId>clucy</artifactId>
+      <version>0.2.1</version>
+    </dependency>
+    <dependency>
       <groupId>lancet</groupId>
       <artifactId>lancet</artifactId>
-      <version>1.0.0</version>
+      <version>1.0.1</version>
     </dependency>
     <dependency>
       <groupId>jline</groupId>
       <artifactId>jline</artifactId>
       <version>0.9.94</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>junit</artifactId>
+          <groupId>junit</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>robert</groupId>
       <artifactId>hooke</artifactId>
-      <version>1.1.0</version>
+      <version>1.1.1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
