--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>leiningen</groupId>
   <artifactId>leiningen</artifactId>
-  <version>1.6.1</version>
+  <version>2.0.0-SNAPSHOT</version>
   <name>leiningen</name>
   <description>Automate Clojure projects without setting your hair on fire.</description>
   <url>https://github.com/technomancy/leiningen</url>
@@ -15,7 +15,7 @@
   <scm>
     <connection>scm:git:git://github.com/technomancy/leiningen.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/technomancy/leiningen.git</developerConnection>
-    <tag>2cb7ec9af48b1a094848a5e9963ea201015a5645</tag>
+    <tag>d9fd35e36c93770baa13b56acc8b4fc523b2356b</tag>
     <url>https://github.com/technomancy/leiningen</url>
   </scm>
   <build>
@@ -56,7 +56,7 @@
     <dependency>
       <groupId>clucy</groupId>
       <artifactId>clucy</artifactId>
-      <version>0.2.1</version>
+      <version>0.2.2</version>
     </dependency>
     <dependency>
       <groupId>lancet</groupId>
