--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>leiningen</groupId>
   <artifactId>leiningen</artifactId>
-  <version>1.7.0-SNAPSHOT</version>
+  <version>1.6.2-SNAPSHOT</version>
   <name>leiningen</name>
   <description>Automate Clojure projects without setting your hair on fire.</description>
   <url>https://github.com/technomancy/leiningen</url>
@@ -15,7 +16,7 @@
   <scm>
     <connection>scm:git:git://github.com/technomancy/leiningen.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/technomancy/leiningen.git</developerConnection>
-    <tag>bd466d751a156be1952dbea7abf510ba1e55b72e</tag>
+    <tag>0e299f0a176aeeac95fb192d2f1de07ca416daff</tag>
     <url>https://github.com/technomancy/leiningen</url>
   </scm>
   <build>
