--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 ---
-script: bin/lein self-install; bin/lein test
+script: bin/lein test
 branches:
   only:
     - 1.x
+    - master
 notifications:
   irc: "irc.freenode.org#leiningen"
