Bootstrap CI with leiningen-core-2.0.0-SNAPSHOT-standalone.jar.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 ---
+before_script: mkdir -p leiningen-core/lib; curl -o leiningen-core/lib/lc.jar p.hagelb.org/lein-core-2-snap-standalone.jar
 script: bin/lein test
 branches:
   only:
