--- a/pom.xml
+++ b/pom.xml
@@ -1,100 +1,6 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>leiningen</groupId>
-  <artifactId>leiningen</artifactId>
-  <version>2.0.0-SNAPSHOT</version>
-  <name>leiningen</name>
-  <description>Automate Clojure projects without setting your hair on fire.</description>
-  <url>https://github.com/technomancy/leiningen</url>
-  <licenses>
-    <license>
-      <name>Eclipse Public License</name>
-    </license>
-  </licenses>
-  <scm>
-    <connection>scm:git:git://github.com/technomancy/leiningen.git</connection>
-    <developerConnection>scm:git:ssh://git@github.com/technomancy/leiningen.git</developerConnection>
-    <tag>d9fd35e36c93770baa13b56acc8b4fc523b2356b</tag>
-    <url>https://github.com/technomancy/leiningen</url>
-  </scm>
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-    <testSourceDirectory>test</testSourceDirectory>
-    <resources>
-      <resource>
-        <directory>resources</directory>
-      </resource>
-    </resources>
-    <testResources>
-      <testResource>
-        <directory>test-resources</directory>
-      </testResource>
-    </testResources>
-  </build>
-  <repositories>
-    <repository>
-      <id>central</id>
-      <url>http://repo1.maven.org/maven2</url>
-    </repository>
-    <repository>
-      <id>clojars</id>
-      <url>http://clojars.org/repo/</url>
-    </repository>
-  </repositories>
-  <dependencies>
-    <dependency>
-      <groupId>org.clojure</groupId>
-      <artifactId>clojure</artifactId>
-      <version>1.2.1</version>
-    </dependency>
-    <dependency>
-      <groupId>org.clojure</groupId>
-      <artifactId>clojure-contrib</artifactId>
-      <version>1.2.0</version>
-    </dependency>
-    <dependency>
-      <groupId>clucy</groupId>
-      <artifactId>clucy</artifactId>
-      <version>0.2.2</version>
-    </dependency>
-    <dependency>
-      <groupId>lancet</groupId>
-      <artifactId>lancet</artifactId>
-      <version>1.0.1</version>
-    </dependency>
-    <dependency>
-      <groupId>jline</groupId>
-      <artifactId>jline</artifactId>
-      <version>0.9.94</version>
-      <exclusions>
-        <exclusion>
-          <artifactId>junit</artifactId>
-          <groupId>junit</groupId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>robert</groupId>
-      <artifactId>hooke</artifactId>
-      <version>1.1.2</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.maven</groupId>
-      <artifactId>maven-ant-tasks</artifactId>
-      <version>2.1.3</version>
-      <exclusions>
-        <exclusion>
-          <artifactId>ant</artifactId>
-          <groupId>ant</groupId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-  </dependencies>
-</project>
-
+<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.0.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"><modelVersion>4.0.0</modelVersion><groupId>leiningen</groupId><artifactId>leiningen</artifactId><version>2.0.0-preview1</version><name>leiningen</name><description>Automate Clojure projects without setting your hair on fire.</description><url>https://github.com/technomancy/leiningen</url><licenses><license><name>Eclipse Public License</name><url>http://www.eclipse.org/legal/epl-v10.html</url></license></licenses><scm><connection>scm:git:git://github.com/technomancy/leiningen.git</connection><developerConnection>scm:git:ssh://git@github.com/technomancy/leiningen.git</developerConnection><tag>201afa48304cca5ddc78a66e15bfba0a726e5886</tag><url>https://github.com/technomancy/leiningen</url></scm><build><sourceDirectory>/home/phil/src/leiningen/src</sourceDirectory><testSourceDirectory>/home/phil/src/leiningen/leiningen-core/test</testSourceDirectory><resources><resource><directory>/home/phil/src/leiningen/resources</directory></resource></resources><testResources><testResource><directory>/home/phil/src/leiningen/leiningen-core/dev-resources</directory></testResource><testResource><directory>/home/phil/src/leiningen/resources</directory></testResource></testResources><plugins><plugin><groupId>org.codehaus.mojo</groupId><artifactId>build-helper-maven-plugin</artifactId><version>1.7</version><executions></executions></plugin></plugins></build><repositories><repository><id>central</id><url>http://repo1.maven.org/maven2</url></repository><repository><id>clojars</id><url>http://clojars.org/repo/</url></repository></repositories><dependencies><dependency><groupId>leiningen-core</groupId><artifactId>leiningen-core</artifactId><version>2.0.0-preview1</version><exclusions></exclusions></dependency><dependency><groupId>clucy</groupId><artifactId>clucy</artifactId><version>0.2.3</version><exclusions></exclusions></dependency><dependency><groupId>useful</groupId><artifactId>useful</artifactId><version>0.7.6-alpha1</version><exclusions></exclusions></dependency><dependency><groupId>lein-newnew</groupId><artifactId>lein-newnew</artifactId><version>0.2.4</version><exclusions></exclusions></dependency><dependency><groupId>reply</groupId><artifactId>reply</artifactId><version>0.1.0-alpha5</version><exclusions></exclusions></dependency><dependency><groupId>org.clojure</groupId><artifactId>data.xml</artifactId><version>0.0.3</version><exclusions></exclusions></dependency><dependency><groupId>bultitude</groupId><artifactId>bultitude</artifactId><version>0.1.3</version><exclusions></exclusions></dependency></dependencies></project>
 <!-- This file was autogenerated by Leiningen.
   Please do not edit it directly; instead edit project.clj and regenerate it.
   It should not be considered canonical data. For more information see
   https://github.com/technomancy/leiningen -->
+
