leiningen-core tests don't need to be run separately.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: clojure
-install: cd leiningen-core; lein test, install; cd ..
+install: cd leiningen-core; lein install; cd ..
 script: bin/lein test
 branches:
   only:
