--- a/leiningen-core/pom.xml
+++ b/leiningen-core/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>leiningen-core</groupId>
   <artifactId>leiningen-core</artifactId>
-  <version>2.0.0</version>
+  <version>2.1.0-SNAPSHOT</version>
   <name>leiningen-core</name>
   <description>Library for core functionality of Leiningen.</description>
   <url>https://github.com/technomancy/leiningen</url>
@@ -37,6 +37,10 @@
       <id>clojars</id>
       <url>http://clojars.org/repo/</url>
     </repository>
+    <repository>
+      <id>sonatype</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+    </repository>
   </repositories>
   <dependencies>
     <dependency>
@@ -48,6 +52,12 @@
       <groupId>bultitude</groupId>
       <artifactId>bultitude</artifactId>
       <version>0.1.7</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>dynapath</artifactId>
+          <groupId>dynapath</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>classlojure</groupId>
@@ -67,13 +77,18 @@
     <dependency>
       <groupId>com.cemerick</groupId>
       <artifactId>pomegranate</artifactId>
-      <version>0.0.13</version>
+      <version>0.0.14-SNAPSHOT</version>
       <exclusions>
         <exclusion>
-          <artifactId>slf4j-api</artifactId>
-          <groupId>org.slf4j</groupId>
+          <artifactId>dynapath</artifactId>
+          <groupId>org.tcrawley</groupId>
         </exclusion>
       </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.tcrawley</groupId>
+      <artifactId>dynapath</artifactId>
+      <version>0.2.3</version>
     </dependency>
   </dependencies>
 </project>
