Go back up a directory for travis test run

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: clojure
-install: cd leiningen-core; lein install; lein classpath | tail -n 1 > .lein-bootstrap
+install: cd leiningen-core; lein install; lein classpath | tail -n 1 > .lein-bootstrap; cd ..
 script: bin/lein test
 branches:
   only:
