--- a/leiningen-core/pom.xml
+++ b/leiningen-core/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>leiningen-core</groupId>
   <artifactId>leiningen-core</artifactId>
-  <version>2.2.0</version>
+  <version>2.3.0</version>
   <name>leiningen-core</name>
   <description>Library for core functionality of Leiningen.</description>
   <url>https://github.com/technomancy/leiningen</url>
@@ -59,11 +59,6 @@
       <version>0.6.6</version>
     </dependency>
     <dependency>
-      <groupId>useful</groupId>
-      <artifactId>useful</artifactId>
-      <version>0.8.6</version>
-    </dependency>
-    <dependency>
       <groupId>robert</groupId>
       <artifactId>hooke</artifactId>
       <version>1.3.0</version>
@@ -81,7 +76,12 @@
     <dependency>
       <groupId>com.hypirion</groupId>
       <artifactId>io</artifactId>
-      <version>0.2.0-RC1</version>
+      <version>0.3.1</version>
+    </dependency>
+    <dependency>
+      <groupId>pedantic</groupId>
+      <artifactId>pedantic</artifactId>
+      <version>0.1.0</version>
     </dependency>
   </dependencies>
 </project>
